# realtime-sensor-engine

./: App.cpp  CMakeLists.txt  README.md
Controller/: Controller.h
Engine/: Engine.cpp  Engine.h
Events/: EventQueue.h
JsonGenerator/: JsonGenerator.cpp  JsonGenerator.h
JsonParsa/: Event.h  JsonParser.cpp  JsonParser.h
